fixed image overflow on first stage setup

--- a/src/components/setup/setup.css
+++ b/src/components/setup/setup.css
@@ -277,8 +277,8 @@
     margin-bottom: 2rem;
 
     #preview{
-        width: 24rem;
-        height: 32rem;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
     }
     
@@ -300,7 +300,7 @@ input[type="number"] {
     }
 
     #stageController{
-        height: 40rem;
+        height: 45rem;
         width: 30rem;
     }
 
